--- a/instamojolib/build.gradle
+++ b/instamojolib/build.gradle
@@ -1,8 +1,32 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+
+allprojects {
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url "http://clojars.org/repo" }
+    }
+    apply plugin: 'com.android.library'
+    apply plugin: 'com.github.dcendents.android-maven'
+}
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
+    repositories {
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
+        maven {
+            url 'https://raw.githubusercontent.com/google/keyczar/master/java/maven/'
+        }
+        maven {
+            url "https://s3-ap-southeast-1.amazonaws.com/godel-release/godel/"
+        }
+        mavenCentral()
+    }
+
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
@@ -25,6 +49,23 @@ repositories {
     }
 }
 
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven {
+            url "https://s3-ap-southeast-1.amazonaws.com/godel-release/godel/"
+        }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    }
+}
+
+group = 'ai.devsupport'
+version = '0.0.9'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -34,4 +75,27 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.instamojo:android-sdk:1.2.6'
     testCompile 'junit:junit:4.12'
+}
+
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    configurations = ['archives']
+    pkg {
+        repo = 'instamojo'
+        name = 'instamojo-sdk'
+        userOrg = 'authmeio'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/shardullavekar/instamojodevsupport.git'
+        version {
+            name = '0.0.9'
+            desc = 'AuthMe helps you replace passwords in your apps'
+            vcsTag = '0.0.9'
+            attributes = ['gradle-plugin': 'ai.devsupport:instamojo-sdk:0.0.9']
+        }
+    }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
 }
