--- a/instamojolib/build.gradle
+++ b/instamojolib/build.gradle
@@ -63,8 +63,8 @@ buildscript {
     }
 }
 
-group = 'ai.devsupport'
-version = '0.0.9'
+group = 'ai.devsupport.instamojo'
+version = '0.1.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -88,10 +88,10 @@ bintray {
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/shardullavekar/instamojodevsupport.git'
         version {
-            name = '0.0.9'
+            name = '0.1.0'
             desc = 'AuthMe helps you replace passwords in your apps'
-            vcsTag = '0.0.9'
-            attributes = ['gradle-plugin': 'ai.devsupport:instamojo-sdk:0.0.9']
+            vcsTag = '0.1.0'
+            attributes = ['gradle-plugin': 'ai.devsupport:instamojo-sdk:0.1.0']
         }
     }
 }
