--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <meta-data android:name="instamojo.orderauth.url"
-                   android:value="http://msgbhej.com/instamojo/new_transaction.php"
+                   android:value="https://morning-coast-29604.herokuapp.com/access_token.php"
             />
 
     </application>
